Job posts, filters and most viewed, applied and new shown on home page

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
+    "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "msal": "^1.4.11",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
