--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "msal": "^1.4.11",
+    "tiptap-vuetify": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-advanced-cropper": "^1.8.2",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
@@ -39,7 +41,9 @@
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^1.0.1"
   },
   "eslintConfig": {
     "root": true,
@@ -54,7 +58,9 @@
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
