--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.16.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "msal": "^1.4.11",
     "tiptap-vuetify": "^2.24.0",
     "vue": "^2.6.11",
     "vue-advanced-cropper": "^1.8.2",
