--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "http-status-codes": "^2.1.4",
+    "inversify-props": "^2.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "reflect-metadata": "^0.1.13",
     "tiptap-vuetify": "^2.24.0",
     "vue": "^2.6.11",
     "vue-advanced-cropper": "^1.8.2",
