--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "http-status-codes": "^2.1.4",
+    "inversify": "^5.1.1",
+    "inversify-inject-decorators": "^3.1.0",
     "inversify-props": "^2.2.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
