--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 VUE_APP_B2C_TENANT=tenant
 VUE_APP_B2C_CLIENTID=client id
 VUE_APP_B2C_SIGNINPOLICY=policy
-VUE_APP_B2C_REDIRECTURI=redirect url
+VUE_APP_B2C_REDIRECT_URI=redirect url
 VUE_APP_B2C_TOKEN=msal.idtoken
 
 VUE_APP_SERVER_HOST=server api
+VUE_APP_B2C_STATE_KEY=state key
+
+VUE_APP_B2C_COMPANY_REGISTER_REDIRECT_URI=uri to redirect after company registration
+VUE_APP_B2C_LOGOUT_URI=logout uri
