--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-advanced-cropper": "^1.8.2",
     "vue-class-component": "^7.2.3",
+    "vue-infinite-loading": "^2.4.5",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0",
