Add release date guard

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ VUE_APP_B2C_STATE_KEY=state key
 
 VUE_APP_B2C_COMPANY_REGISTER_REDIRECT_URI=uri to redirect after company registration
 VUE_APP_B2C_LOGOUT_URI=logout uri
+
+VUE_APP_RELEASE_DATE=release date
