Modify production env file server host var

--- a/.env.production
+++ b/.env.production
@@ -6,6 +6,6 @@ VUE_APP_B2C_COMPANY_REGISTER_REDIRECT_URI=https://feriaempleoescomipn.com.mx/emp
 VUE_APP_B2C_LOGOUT_URI=https://feriaempleoescomipn.com.mx
 VUE_APP_B2C_TOKEN=msal.idtoken
 VUE_APP_B2C_STATE_KEY=msal.state
-VUE_APP_SERVER_HOST=https://feriaempleoescomipn.com.mx/api/v1
+VUE_APP_SERVER_HOST=https://feriaempleoescomipn.com.mx/api/v1/
 
 VUE_APP_RELEASE_DATE=2021/11/24
